# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust/ohos_cargo_crate.gni")

ohos_cargo_crate("lib") {
    crate_name = "static_assertions"
    crate_type = "rlib"
    crate_root = "src/lib.rs"

    sources = ["src/lib.rs"]
    edition = "2015"
    cargo_pkg_version = "1.1.0"
    cargo_pkg_authors = "Nikolai Vazquez"
    cargo_pkg_name = "static_assertions"
    cargo_pkg_description = "Compile-time assertions to ensure that invariants are met."
    module_output_extension = ".rlib"
    part_name = "rust_static_assertions_rs"
    subsystem_name = "thirdparty"
}
